--- a/_config.yml
+++ b/_config.yml
@@ -19,15 +19,20 @@
 # in the templates via {{ site.myvariable }}.
 
 title: PUFFIN
-email: your-email@example.com
+email: jdhare@mit.edu
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+
+address: 
+  - PUFFIN Group,
+  - Plasma Science and Fusion Center,
+  - Massachusetts Institute of Technology,
+  - 77 Massachusetts Ave., NW16,
+  - MA 02139, USA.
 
 # Build settings
 plugins:
