--- a/_config.yml
+++ b/_config.yml
@@ -19,11 +19,22 @@
 # in the templates via {{ site.myvariable }}.
 
 title: PUFFIN
+author: Jack Hare
 email: jdhare@mit.edu
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+twitter: Jack_D_Hare
+description: >- # this means to ignore newlines until "seo-tags:"
+  PUFFIN is a new pulsed-power facility at the Plasma Science and Fusion Center (PSFC), 
+  at the Massachusetts Institute of Technology (MIT). PUFFIN (the PUlser For Fundamental 
+  [Plasma Physics] INvestigations) will use intense pulses of electrical current to heat 
+  solids to a high-energy-density (HED) plasma state. We will use PUFFIN to carry out 
+  research into fundamental plasma processes, such as magnetic reconnection and 
+  magneto-hydrodynamic turbulence, which underpin events such as solar flares and 
+  the transport of matter in the accretions disks of black holes.
+keywords: >-
+  "puffin, plasma, physics, psfc, nuclear, fusion, hed, high-energy-density, fundamental, 
+  science, solar, magnetic, reconnection, turbulence, mhd, mit, massachusetts, pulsed-power,
+  ltd, ltds, diagnostics"
+ogimage: # This is the image that will display in tweets if someone links to our website
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
