--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,34 +1,5 @@
 - title: An Imaging Refractometer for Density Fluctuation Measurements in High Energy Density Plasmas
-  authors:
-    - name: J. D. Hare
-      highlight: yes
-    - name: G. C. Burdiak
-    - name: S. Merlini
-    - name: J. P. Chittenden
-    - name: T. Clayson
-    - name: A. J. Crilly
-    - name: J. W. D. Halliday
-      highlight: yes
-    - name: D. R. Russell
-    - name: R. A. Smith
-    - name: N. Stuart
-    - name: L. G. Suttle
-    - name: S. V. Lebedev
+  authors: J. D. Hare, G. C. Burdiak, S. Merlini, J. P. Chittenden, T. Clayson, A. J. Crilly, J. W. D. Halliday, D. R. Russell, R. A. Smith, N. Stuart, L. G. Suttle, S. V. Lebedev
   journal: HTDP
   year: 2020
   link: https://aip.scitation.org/doi/full/10.1063/5.0040919
-
-- title: "Something Interesting About Plasmas"
-  authors:
-    - name: A. N. Other
-    - name: T. W. O. Varnish
-      highlight: yes
-    - name: R. Datta
-      highlight: yes
-    - name: S. Merlini
-    - name: J. P. Chittenden
-    - name: J. D. Hare
-      highlight: yes
-    - name: S. V. Lebedev
-  journal: Nature
-  year: 2018
