Add arXiv pre-print

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,5 +1,5 @@
-- title: An Imaging Refractometer for Density Fluctuation Measurements in High Energy Density Plasmas
-  authors: J. D. Hare, G. C. Burdiak, S. Merlini, J. P. Chittenden, T. Clayson, A. J. Crilly, J. W. D. Halliday, D. R. Russell, R. A. Smith, N. Stuart, L. G. Suttle, S. V. Lebedev
-  journal: HTDP
-  year: 2020
-  link: https://aip.scitation.org/doi/full/10.1063/5.0040919
+- title: "Time-Resolved Velocity and Ion Sound Speed Measurements from Simultaneous Bow Shock Imaging and Inductive Probe Measurements"
+  authors: R. Datta, D. R. Russell, T. Clayson, J. P. Chittenden, S. V. Lebedev, J. D. Hare
+  journal: "arXiv (pre-print)"
+  year: 2022
+  link: http://arxiv.org/abs/2205.06082
