added geothermal project

--- a/_data/research.yml
+++ b/_data/research.yml
@@ -1,25 +1,31 @@
-- title: Magnetohydrodynamic Turbulence
-  page-title: MHD Turbulence
-  image: /assets/turbulence_shadowgraphy.png
-  permalink: /research/mhd-turbulence/
-  header-link: Turbulence
-
 - title: Magnetic Reconnection
   page-title: Magnetic Reconnection
   image: /assets/s1214_15-Shot.gif
   permalink: /research/reconnection/
   header-link: Reconnection
-
+  
+- title: "MARZ: Magnetic Reconnection on Z"
+  page-title: MARZ
+  permalink: /research/marz
+  header-link: MARZ
+  
+- title: Magnetohydrodynamic Turbulence
+  page-title: MHD Turbulence
+  image: /assets/turbulence_shadowgraphy.png
+  permalink: /research/mhd-turbulence/
+  header-link: Turbulence
+  
 - title: Magnetized Target Fusion
   page-title: Magnetized Target Fusion
   image: /assets/turbulence_shadowgraphy.png
   permalink: /research/fusion/
   header-link: Fusion
-
-- title: "MARZ: Magnetic Reconnection on Z"
-  page-title: MARZ
-  permalink: /research/marz
-  header-link: MARZ
+  
+- title: Geothermal Energy
+  page-title: Geothermal Energy
+  image: /assets/turbulence_shadowgraphy.png
+  permalink: /research/geothermal/
+  header-link: Geothermal
 
 - title: Our Publications
   page-title: Publications
