added arxiv paper

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,3 +1,9 @@
+- title: "The structure of 3D collisional magnetized bow shocks in pulsed-power-driven plasma flow"
+  authors: R. Datta, D. R. Russell, I. Tang, T. Clayson, L. G. Suttle, J. P. Chittenden, S. V. Lebedev, J. D. Hare
+  journal: "arXiv (pre-print)"
+  year: 2022
+  link: http://arxiv.org/abs/2208.04535
+  
 - title: "Time-Resolved Velocity and Ion Sound Speed Measurements from Simultaneous Bow Shock Imaging and Inductive Probe Measurements"
   authors: R. Datta, D. R. Russell, T. Clayson, J. P. Chittenden, S. V. Lebedev, J. D. Hare
   journal: "arXiv (pre-print)"
