Add Lansing's profile to team page

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -56,3 +56,15 @@
                 interested in radiative effects and instabilities in magnetic reconnection. 
                 Outside work, she enjoys playing the cello, singing and rowing."
   profile_img: /assets/profiles/schowdhry.jpg
+
+- name: Lansing Horan IV
+  pub_name_short: L. Horan
+  pub_name_long: Lansing Horan
+  role: Graduate Student
+  email: lansing@mit.edu
+  description: "is a graduate student in the Department of Nuclear Science and Engineering 
+                at MIT.  He is interested in radiatively-cooled magnetic reconnection to 
+                learn about all sorts of cool physics things.  Lansing enjoys playing 
+                board/card games, TV shows of all kinds, biking, NFL football, reading, 
+                and (most importantly) watching The Matrix movies as often as possible."
+  profile_img: /assets/profiles/lhoran.jpg
