Add imaging refractometer paper

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -10,6 +10,12 @@
   year: 2022
   link: https://doi.org/10.1063/5.0098823
 
+- title: "An imaging refractometer for density fluctuation measurements in high energy density plasmas"
+  authors: J. D. Hare, G. C. Burdiak, S. Merlini, J. P. Chittenden, T. Clayson, A. J. Crilly, J. W. D. Halliday, D. R. Russell, R. A. Smith, N. Stuart, L. G. Suttle, S. V. Lebedev
+  journal: Review of Scientific Instruments
+  year: 2021
+  link: https://doi.org/10.1063/5.0040919
+
 - title: "Two-Colour Interferometry and Thomson Scattering Measurements of a Plasma Gun."
   authors: J. D. Hare, J. MacDonald, S. N. Bland, J. Dranczewski, J. W. D. Halliday, S. V. Lebedev, L. G. Suttle, E. R. Tubman, W. Rozmus
   journal: "Plasma Physics and Controlled Fusion"
