Updated arxiv link to journal

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2,7 +2,7 @@
   authors: R. Datta, D. R. Russell, I. Tang, T. Clayson, L. G. Suttle, J. P. Chittenden, S. V. Lebedev, J. D. Hare
   journal: "Journal of Plasma Physics"
   year: 2022
-  link: http://arxiv.org/abs/2208.04535
+  link: https://www.cambridge.org/core/journals/journal-of-plasma-physics/article/abs/structure-of-3d-collisional-magnetized-bow-shocks-in-pulsedpowerdriven-plasma-flows/F8BC99DB5E68FC94FB57DE6ECBDA8EE3
   
 - title: "Time-Resolved Velocity and Ion Sound Speed Measurements from Simultaneous Bow Shock Imaging and Inductive Probe Measurements"
   authors: R. Datta, D. R. Russell, T. Clayson, J. P. Chittenden, S. V. Lebedev, J. D. Hare
