--- a/_data/urops/students.yml
+++ b/_data/urops/students.yml
@@ -5,7 +5,7 @@
 
 - name: Dylan Robinson
   start: Spring 2022
-  end: Present
+  end: IAP 2023
   affiliation: MIT
 
 - name: Jose Cerritos Arevalo
@@ -23,12 +23,15 @@
 
 - name: Emily Neill
   start: IAP 2023
+  end: Spring 2023
   affiliation: MIT
 
 - name: Jane Atkinson
   start: IAP 2023
+  end: Spring 2023
   affiliation: MIT
 
 - name: Osahon Odiase
   start: IAP 2023
+  end: Present
   affiliation: MIT
