added rad cooling paper

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,3 +1,9 @@
+- title: "Radiative cooling effects on reverse shocks formed by magnetized supersonic plasma flows"
+  authors: S. Merlini, J. D. Hare, G. C. Burdiak, J. W. D. Halliday, A. Ciardi, J. P. Chittenden, T. Clayson, A. J. Crilly, S. J. Eardley, K. E. Marrow, D. R. Russell, R. A. Smith, N. Stuart, L. G. Suttle, E. R. Tubman, V. Valenzuela-Villaseca, T. W. O. Varnish, and S. V. Lebedev
+  journal: "Physics of Plasmas"
+  year: 2023
+  link: https://pubs.aip.org/aip/pop/article/30/9/092102/2909321/Radiative-cooling-effects-on-reverse-shocks-formed
+  
 - title: "The structure of 3-D collisional magnetized bow shocks in pulsed-power-driven plasma flow"
   authors: R. Datta, D. R. Russell, I. Tang, T. Clayson, L. G. Suttle, J. P. Chittenden, S. V. Lebedev, J. D. Hare
   journal: "Journal of Plasma Physics"
