Add Zhiyuan's profile

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -85,3 +85,15 @@
                 board/card games, TV shows of all kinds, biking, NFL football, reading, 
                 and (most importantly) watching The Matrix movies as often as possible."
   profile_img: /assets/profiles/lhoran.jpg
+
+- name: Zhiyuan Jiang
+  pub_name_short: Z. Jiang
+  pub_name_long: Zhiyuan Jiang
+  pronouns: he/him
+  role: Graduate Student
+  email: jiang712@mit.edu
+  description: "is a visiting graduate student in the Department of Nuclear Science and 
+                Engineering at MIT. He is a PhD candidate at Xi’an Jiaotong University 
+                and interested in optical diagnostics for high-energy-density plasmas.
+                Zhiyuan enjoys table tennis, climbing, and watching animation."
+  profile_img: /assets/profiles/zjiang.jpg
