--- a/_data/people.yml
+++ b/_data/people.yml
@@ -86,6 +86,18 @@
                 and (most importantly) watching The Matrix movies as often as possible."
   profile_img: /assets/profiles/lhoran.jpg
 
+- name: Yuqian (Lily) Li
+  pub_name_short: Y. Li
+  pub_name_long: Yuqian Li 
+  pronouns: she/her
+  role: Graduate Student
+  email: lilyli23@mit.edu
+  description: "is a graduate student in the Department of Nuclear Science and Engineering 
+                at MIT. She is interested in fundamental plasma physics in laboratory 
+                settings and other cool things happening in space. Outside work, Lily enjoys 
+                watching shows and reading. She also has a strong passion for food and photography."
+  profile_img: /assets/profiles/lilyli.jpg
+
 - name: Zhiyuan Jiang
   pub_name_short: Z. Jiang
   pub_name_long: Zhiyuan Jiang
