updated preprints and publications

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,3 +1,9 @@
+- title: "Experimental Evidence of Plasmoids in High-beta Magnetic Reconnection"
+  authors: J. A. Pearcy, M. J. Rosenberg, T. M. Johnson, G. D. Sutcliffe, B. L. Reichelt, J. D. Hare, N. F. Loureiro, R. D. Petrasso, and C. K. Li.
+  journal: "Physical Review Letters"
+  year: 2024
+  link: https://link.aps.org/doi/10.1103/PhysRevLett.132.035101
+
 - title: "Plasma flows during the ablation stage of an over-massed pulsed-power-driven exploding planar wire array"
   authors: R. Datta, J. Angel, J. B. Greenly, S. N. Bland, J. P. Chittenden, E. S. Lavine, W. M. Potter, D. Robinson, T. W. O. Varnish, E. Wong, D. A. Hammer, B. R. Kusse, J. D. Hare
   journal: "Physics of Plasmas"
