--- a/_data/preprints.yml
+++ b/_data/preprints.yml
@@ -4,6 +4,12 @@
   year: 2024
   link: https://arxiv.org/abs/2401.04643
   
+  - title: "Radiatively Cooled Magnetic Reconnection Experiments Driven by Pulsed Power"
+  authors: R. Datta, K. Chandler, C.E. Myers, J. P. Chittenden, A. J. Crilly, C. Aragon, D. J. Ampleford, J. T. Banasek, A. Edens, W. R. Fox, S. B. Hansen, E. C. Harding, C. A. Jennings, H. Ji, C. C. Kuranz, S. V. Lebedev, Q. Looker, S. G. Patel, A. Porwitzky, G. A. Shipley, D. A. Uzdensky, D. A. Yager-Elorriaga, J.D. Hare
+  journal: "arXiv, submitted to PoP"
+  year: 2024
+  link: http://arxiv.org/abs/2401.17923
+    
 - title: "Simulations of Radiatively Cooled Magnetic Reconnection Driven by Pulsed Power"
   authors: R. Datta, A. J. Crilly, J. P. Chittenden, S. Chowdhry, K. Chandler, N. Chaturvedi, C. E. Myers, W. R. Fox, S. B. Hansen, C. A. Jennings, H. Ji, C. C. Kuranz, S. V. Lebedev, D. A. Uzdensky, J. D. Hare
   journal: "arXiv, submitted to JPP"
@@ -12,6 +18,6 @@
   
 - title: "Machine learning assisted analysis of visible spectroscopy in  pulsed-power-driven plasmas"
   authors: R. Datta, F. Ahmed, J. D. Hare
-  journal: "arXiv, submitted to IEEE TPS"
+  journal: "arXiv, accepted for publication in IEEE TPS"
   year: 2023
   link: http://arxiv.org/abs/2308.16828
